# pcc

./: CLAUDE.md  README.md  justfile
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: main.ts
server/: .projections.json  Dockerfile  bot.py  env.example  justfile  pyproject.toml
server/data/: example.json  room1.json
server/engine/: command.py  event.py  game.py  item.py  relationship.py  room.py  test_game.py  test_item.py  test_room.py
