[tool.poetry]
name = "pcc"
version = "0.1.0"
description = "Jake testing pipecat cloud"
authors = ["Jake Gordon <jakesgordon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pipecat-ai = {extras = ["silero", "cartesia", "deepgram", "openai", "daily", "webrtc", "runner"], version = "^0.0.80"}
pipecatcloud = "^0.2.3"
python-dotenv = "1.0.1"
